Add swagger docs and change response format
